# cadastre_map

./: .gitignore  README.md  cadastre.db  docker-compose.yml  pyproject.toml
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: 0830a90b4920_.py  10867ab7cdde_.py  35048d1b04b9_.py  bc70a9586fcc_.py  e9bead0d5557_first_migration.py
app/: Dockerfile  cadastre.db  main.py  requirements.txt  test_main_app.py
app/migrations/: env.py
app/migrations/versions/: 0dee814c689a_.py  8e9b6a694e1c_.py  a311f0579a54_.py
app/src/: admin.py  api.py  crud.py  database.py  exceptions.py  models.py  settings.py
app/tests/: test_api.py  test_db.py
external_app/: Dockerfile  main.py  test_expernal_app.py  tests.py
tests/: test_app.py  test_expernal_app.py
