[tool.poetry]
name = "map"
version = "0.1.0"
description = ""
authors = ["Дмитрий Морозов <ADM713934@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.2"}
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.22"
alembic = "^1.12.0"
sqladmin = {extras = ["full"], version = "^0.15.2"}
pytest = "^7.4.2"
requests = "^2.31.0"
coverage = "^7.3.2"
pytest-cov = "^4.1.0"
httpx = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
