[tool.poetry]
name = "cadastre-map"
version = "0.1.0"
description = ""
authors = ["Дмитрий Морозов <ADM713934@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.104.0"}
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.22"
alembic = "^1.12.0"
sqladmin = "^0.15.2"
pytest = "^7.4.2"
starlette-admin = "^0.11.2"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
